// Copyright 2025 Cofide Limited.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package proto.identity.v1alpha1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/cofide/cofide-api-sdk/gen/go/proto/identity/v1alpha1";

message Identity {
  string id = 1;
  string org_id = 2;
  string trust_zone_id = 3;
  string cluster_id = 4;
  string attestation_policy_id = 5;
  string ap_binding_id = 6;
  string workload_id = 7;
  string spiffe_id = 8;
  string parent_id = 9;
  repeated Selector selectors = 10;
  repeated IdentityFederation federations = 11;
  google.protobuf.Timestamp created_at = 12;
}

message Selector {
  string type = 1;
  string value = 2;
}

message IdentityFederation {
  oneof federation {
    string trust_zone_id = 1;
    string trust_domain = 2;
  }
}
